[package]
name = "matc"
version = "0.1.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Matter protocol library (controller side)"
repository = "https://github.com/tom-code/rust-matc"
homepage = "https://github.com/tom-code/rust-matc"
exclude = [".github"]
keywords = ["matter", "protocol", "controller"]


[dependencies]
p256 = {version="0.13.0", features=["ecdh"]}
ecdsa = {version="0.16.8", features=["digest", "pem"]}
crypto-bigint = {version="0.5.*", features=["rand"]}
pbkdf2 = "0.12.2"
sha2 = { version = "0.10.8"}
sha1 = { version = "0.10.6"}
hkdf = "0.12.4"
hmac = "0.12.1"
ccm = {version="0.5.0"}
aes = {version="0.8.4"}
x509-cert = {version="0.2.4"}
pem="3.0.*"

rand = "0.8.*"
const-oid = "0.9.*"
anyhow = "1.0.*"
hex = "0.4.*"
byteorder = "1.5.0"
tokio = {version="1.42.*", features=["sync", "net", "rt", "rt-multi-thread", "time", "macros"]}
tokio-util = {version="0.7.*"}
log = "0.4"
env_logger = "0.11"

socket2 = "0.5.8"
if-addrs = { version = "0.13", features = ["link-local"] }

[dev-dependencies]
clap = {version="4.4.*", features=["derive"]}


